Closed
Bug 1490037
Opened 7 years ago
Closed 7 years ago
Assertion failure: content == pc->Document()->GetRootElement() (Root element is the only case for this fallback path to be triggered), at /builds/worker/workspace/build/src/layout/base/nsLayoutUtils.cpp:10268
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox62 | --- | wontfix |
| firefox63 | --- | wontfix |
| firefox64 | --- | fixed |
People
(Reporter: jkratzer, Assigned: xidorn)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
Testcase found while fuzzing mozilla-central rev 75cc42919ab2.
rax = 0x0000000000000000 rdx = 0x0000000000000000
rcx = 0x0000000000000b40 rbx = 0x00007fb4cd793380
rsi = 0x00007fb4e4f5b8b0 rdi = 0x00007fb4e4f5a680
rbp = 0x00007ffc3468bf10 rsp = 0x00007ffc3468bef0
r8 = 0x00007fb4e4f5b8b0 r9 = 0x00007fb4e60d3740
r10 = 0x00000000ffffffc3 r11 = 0x0000000000000000
r12 = 0x00007fb4c8447000 r13 = 0x00007ffc3468c067
r14 = 0x000000003468c039 r15 = 0x00007ffc3468c3e8
rip = 0x00007fb4d59a578c
OS|Linux|0.0.0 Linux 4.15.0-33-generic #36-Ubuntu SMP Wed Aug 15 16:00:05 UTC 2018 x86_64
CPU|amd64|family 6 model 78 stepping 3|1
GPU|||
Crash|SIGSEGV /SEGV_MAPERR|0x0|0
0|0|libxul.so|nsLayoutUtils::StyleForScrollbar(nsIFrame*)|hg:hg.mozilla.org/mozilla-central:layout/base/nsLayoutUtils.cpp:75cc42919ab29493c1367a00ac268eec6635834e|10250|0x18
0|1|libxul.so|nsNativeThemeGTK::ThemeSupportsWidget(nsPresContext*, nsIFrame*, mozilla::StyleAppearance)|hg:hg.mozilla.org/mozilla-central:widget/gtk/nsNativeThemeGTK.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1870|0x8
0|2|libxul.so|nsIFrame::AddXULMinSize(nsBoxLayoutState&, nsIFrame*, nsSize&, bool&, bool&)|hg:hg.mozilla.org/mozilla-central:layout/xul/nsBox.cpp:75cc42919ab29493c1367a00ac268eec6635834e|556|0x24
0|3|libxul.so|nsBoxFrame::GetXULMinSize(nsBoxLayoutState&)|hg:hg.mozilla.org/mozilla-central:layout/xul/nsBoxFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|777|0x16
0|4|libxul.so|GetScrollbarMetrics|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|310|0x10
0|5|libxul.so|nsHTMLScrollFrame::TryLayout(mozilla::ScrollReflowInput*, mozilla::ReflowOutput*, bool, bool, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|382|0x5
0|6|libxul.so|nsHTMLScrollFrame::ReflowContents(mozilla::ScrollReflowInput*, mozilla::ReflowOutput const&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|774|0x1a
0|7|libxul.so|nsHTMLScrollFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1120|0x5
0|8|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:75cc42919ab29493c1367a00ac268eec6635834e|309|0x10
0|9|libxul.so|nsBlockFrame::ReflowFloat(mozilla::BlockReflowInput&, mozilla::LogicalRect const&, nsIFrame*, mozilla::LogicalMargin&, mozilla::LogicalMargin&, bool, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|6452|0x2d
0|10|libxul.so|mozilla::BlockReflowInput::FlowAndPlaceFloat(nsIFrame*)|hg:hg.mozilla.org/mozilla-central:layout/generic/BlockReflowInput.cpp:75cc42919ab29493c1367a00ac268eec6635834e|917|0x9
0|11|libxul.so|mozilla::BlockReflowInput::AddFloat(nsLineLayout*, nsIFrame*, int)|hg:hg.mozilla.org/mozilla-central:layout/generic/BlockReflowInput.cpp:75cc42919ab29493c1367a00ac268eec6635834e|627|0xb
0|12|libxul.so|nsLineLayout::ReflowFrame(nsIFrame*, nsReflowStatus&, mozilla::ReflowOutput*, bool&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsLineLayout.cpp:75cc42919ab29493c1367a00ac268eec6635834e|971|0x8
0|13|libxul.so|nsBlockFrame::ReflowInlineFrame(mozilla::BlockReflowInput&, nsLineLayout&, nsLineList_iterator, nsIFrame*, LineReflowStatus*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4269|0x14
0|14|libxul.so|nsBlockFrame::DoReflowInlineFrames(mozilla::BlockReflowInput&, nsLineLayout&, nsLineList_iterator, nsFlowAreaRect&, int&, nsFloatManager::SavedState*, bool*, LineReflowStatus*, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4069|0x2d
0|15|libxul.so|nsBlockFrame::ReflowInlineFrames(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|3945|0x41
0|16|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2924|0x1a
0|17|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2458|0x20
0|18|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1292|0xf
0|19|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, unsigned int, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|951|0x1a
0|20|libxul.so|nsHTMLScrollFrame::ReflowScrolledFrame(mozilla::ScrollReflowInput*, bool, bool, mozilla::ReflowOutput*, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|608|0x5
0|21|libxul.so|nsHTMLScrollFrame::ReflowContents(mozilla::ScrollReflowInput*, mozilla::ReflowOutput const&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|731|0x14
0|22|libxul.so|nsHTMLScrollFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1120|0x5
0|23|libxul.so|nsBlockReflowContext::ReflowBlock(mozilla::LogicalRect const&, bool, nsCollapsingMargin&, int, bool, nsLineBox*, mozilla::ReflowInput&, nsReflowStatus&, mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockReflowContext.cpp:75cc42919ab29493c1367a00ac268eec6635834e|309|0x10
0|24|libxul.so|nsBlockFrame::ReflowFloat(mozilla::BlockReflowInput&, mozilla::LogicalRect const&, nsIFrame*, mozilla::LogicalMargin&, mozilla::LogicalMargin&, bool, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|6452|0x2d
0|25|libxul.so|mozilla::BlockReflowInput::FlowAndPlaceFloat(nsIFrame*)|hg:hg.mozilla.org/mozilla-central:layout/generic/BlockReflowInput.cpp:75cc42919ab29493c1367a00ac268eec6635834e|917|0x9
0|26|libxul.so|mozilla::BlockReflowInput::AddFloat(nsLineLayout*, nsIFrame*, int)|hg:hg.mozilla.org/mozilla-central:layout/generic/BlockReflowInput.cpp:75cc42919ab29493c1367a00ac268eec6635834e|627|0xb
0|27|libxul.so|nsLineLayout::ReflowFrame(nsIFrame*, nsReflowStatus&, mozilla::ReflowOutput*, bool&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsLineLayout.cpp:75cc42919ab29493c1367a00ac268eec6635834e|971|0x8
0|28|libxul.so|nsBlockFrame::ReflowInlineFrame(mozilla::BlockReflowInput&, nsLineLayout&, nsLineList_iterator, nsIFrame*, LineReflowStatus*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4269|0x14
0|29|libxul.so|nsBlockFrame::DoReflowInlineFrames(mozilla::BlockReflowInput&, nsLineLayout&, nsLineList_iterator, nsFlowAreaRect&, int&, nsFloatManager::SavedState*, bool*, LineReflowStatus*, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4069|0x2d
0|30|libxul.so|nsBlockFrame::ReflowInlineFrames(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|3945|0x41
0|31|libxul.so|nsBlockFrame::ReflowLine(mozilla::BlockReflowInput&, nsLineList_iterator, bool*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2924|0x1a
0|32|libxul.so|nsBlockFrame::ReflowDirtyLines(mozilla::BlockReflowInput&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2458|0x20
0|33|libxul.so|nsBlockFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsBlockFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1292|0xf
0|34|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, unsigned int, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|951|0x1a
0|35|libxul.so|nsCanvasFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsCanvasFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|804|0x4d
0|36|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, mozilla::WritingMode const&, mozilla::LogicalPoint const&, nsSize const&, unsigned int, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|951|0x1a
0|37|libxul.so|nsHTMLScrollFrame::ReflowScrolledFrame(mozilla::ScrollReflowInput*, bool, bool, mozilla::ReflowOutput*, bool)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|608|0x5
0|38|libxul.so|nsHTMLScrollFrame::ReflowContents(mozilla::ScrollReflowInput*, mozilla::ReflowOutput const&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|731|0x14
0|39|libxul.so|nsHTMLScrollFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsGfxScrollFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1120|0x5
0|40|libxul.so|nsContainerFrame::ReflowChild(nsIFrame*, nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, int, int, unsigned int, nsReflowStatus&, nsOverflowContinuationTracker*)|hg:hg.mozilla.org/mozilla-central:layout/generic/nsContainerFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|995|0x19
0|41|libxul.so|mozilla::ViewportFrame::Reflow(nsPresContext*, mozilla::ReflowOutput&, mozilla::ReflowInput const&, nsReflowStatus&)|hg:hg.mozilla.org/mozilla-central:layout/generic/ViewportFrame.cpp:75cc42919ab29493c1367a00ac268eec6635834e|339|0x2b
0|42|libxul.so|mozilla::PresShell::DoReflow(nsIFrame*, bool)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|9020|0x25
0|43|libxul.so|mozilla::PresShell::ProcessReflowCommands(bool)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|9193|0xe
0|44|libxul.so|mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4351|0x15
0|45|libxul.so|mozilla::PresShell::DoFlushPendingNotifications(mozilla::FlushType)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|4138|0x7
0|46|libxul.so|mozilla::EventStateManager::PreHandleEvent(nsPresContext*, mozilla::WidgetEvent*, nsIFrame*, nsIContent*, nsEventStatus*, nsIContent*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventStateManager.cpp:75cc42919ab29493c1367a00ac268eec6635834e|690|0xb
0|47|libxul.so|mozilla::PresShell::HandleEventInternal(mozilla::WidgetEvent*, nsEventStatus*, bool, nsIContent*)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|7648|0x26
0|48|libxul.so|mozilla::PresShell::HandleEvent(nsIFrame*, mozilla::WidgetGUIEvent*, bool, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|7292|0x1e
0|49|libxul.so|nsViewManager::DispatchEvent(mozilla::WidgetGUIEvent*, nsView*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:view/nsViewManager.cpp:75cc42919ab29493c1367a00ac268eec6635834e|812|0x20
0|50|libxul.so|nsView::HandleEvent(mozilla::WidgetGUIEvent*, bool)|hg:hg.mozilla.org/mozilla-central:view/nsView.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1141|0x1a
0|51|libxul.so|mozilla::widget::PuppetWidget::DispatchEvent(mozilla::WidgetGUIEvent*, nsEventStatus&)|hg:hg.mozilla.org/mozilla-central:widget/PuppetWidget.cpp:75cc42919ab29493c1367a00ac268eec6635834e|409|0x20
0|52|libxul.so|mozilla::layers::APZCCallbackHelper::DispatchWidgetEvent(mozilla::WidgetGUIEvent&)|hg:hg.mozilla.org/mozilla-central:gfx/layers/apz/util/APZCCallbackHelper.cpp:75cc42919ab29493c1367a00ac268eec6635834e|537|0x1f
0|53|libxul.so|mozilla::dom::TabChild::HandleRealMouseButtonEvent(mozilla::WidgetMouseEvent const&, mozilla::layers::ScrollableLayerGuid const&, unsigned long const&)|hg:hg.mozilla.org/mozilla-central:dom/ipc/TabChild.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1736|0x8
0|54|libxul.so|mozilla::dom::TabChild::RecvRealMouseButtonEvent(mozilla::WidgetMouseEvent const&, mozilla::layers::ScrollableLayerGuid const&, unsigned long const&)|hg:hg.mozilla.org/mozilla-central:dom/ipc/TabChild.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1708|0x8
0|55|libxul.so|mozilla::dom::TabChild::RecvSynthMouseMoveEvent(mozilla::WidgetMouseEvent const&, mozilla::layers::ScrollableLayerGuid const&, unsigned long const&)|hg:hg.mozilla.org/mozilla-central:dom/ipc/TabChild.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1669|0x5
0|56|libxul.so|mozilla::dom::PBrowserChild::OnMessageReceived(IPC::Message const&)|s3:gecko-generated-sources:0e43f1bff49da52b3e4b5eb0c6289f7a78d4ac499c6652613a28d157a7575447ee4464fc43f57144d6a3653eeb5963e5a2d3ba35d1c3fdb7cfb8bec0456d0519/ipc/ipdl/PBrowserChild.cpp:|3513|0x1d
0|57|libxul.so|mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2248|0x6
0|58|libxul.so|mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2175|0xb
0|59|libxul.so|mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2012|0xb
0|60|libxul.so|mozilla::ipc::MessageChannel::MessageTask::Run()|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:75cc42919ab29493c1367a00ac268eec6635834e|2045|0xc
0|61|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:75cc42919ab29493c1367a00ac268eec6635834e|337|0x15
0|62|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:75cc42919ab29493c1367a00ac268eec6635834e|1161|0x15
0|63|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:75cc42919ab29493c1367a00ac268eec6635834e|519|0x11
0|64|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:75cc42919ab29493c1367a00ac268eec6635834e|97|0xa
0|65|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:75cc42919ab29493c1367a00ac268eec6635834e|325|0x17
0|66|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:75cc42919ab29493c1367a00ac268eec6635834e|318|0x8
0|67|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:75cc42919ab29493c1367a00ac268eec6635834e|158|0xd
0|68|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:75cc42919ab29493c1367a00ac268eec6635834e|944|0x11
0|69|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:75cc42919ab29493c1367a00ac268eec6635834e|269|0x5
0|70|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:75cc42919ab29493c1367a00ac268eec6635834e|325|0x17
0|71|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:75cc42919ab29493c1367a00ac268eec6635834e|318|0x8
0|72|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:75cc42919ab29493c1367a00ac268eec6635834e|770|0x8
0|73|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:75cc42919ab29493c1367a00ac268eec6635834e|50|0x14
0|74|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:75cc42919ab29493c1367a00ac268eec6635834e|287|0x11
0|75|libc-2.27.so||||0x21b97
0|76|firefox-bin|MOZ_ReportAssertionFailure|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:75cc42919ab29493c1367a00ac268eec6635834e|164|0x5
Flags: in-testsuite?
Updated•7 years ago
|
Flags: needinfo?(xidorn+moz)
| Assignee | ||
Comment 1•7 years ago
|
||
So the problem here is that we have a scrollbar in a generated content (::before) which has a display:contents parent.
The bug is actually that we skip the generated content which we shouldn't. Probably need to revise the logic in skipping IsInNativeAnonymousSubtree and make it only skip scrollbar elements.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → xidorn+moz
Flags: needinfo?(xidorn+moz)
| Assignee | ||
Comment 2•7 years ago
|
||
Comment 3•7 years ago
|
||
Comment on attachment 9007950 [details]
Bug 1490037 - Have StyleForScrollbar only skip anonymous scrollbar nodes.
Emilio Cobos Álvarez (:emilio) has approved the revision.
Attachment #9007950 -
Flags: review+
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c661bb000e34
Have StyleForScrollbar only skip anonymous scrollbar nodes. r=emilio
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 6•7 years ago
|
||
Is there a user impact which justifies backport consideration here, or can this just ride the trains?
Blocks: 1463687
status-firefox62:
--- → wontfix
status-firefox63:
--- → affected
status-firefox-esr60:
--- → unaffected
Flags: needinfo?(xidorn+moz)
Flags: in-testsuite?
Flags: in-testsuite+
| Assignee | ||
Comment 7•7 years ago
|
||
I don't think there's any user impact, so I think this can just ride the train.
Flags: needinfo?(xidorn+moz)
Updated•7 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•