Bug 1490037 - Have StyleForScrollbar only skip anonymous scrollbar nodes. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D5491

--HG--
extra : moz-landing-system : lando